@@ -1,17 +1,19 @@
 <?php
 $student_id = (int) $_GET['student_id'];
 $student = get_userdata( $student_id );
-$avatar = get_avatar( $student->user_email, 92 );
-$enrolled_courses = CoursePress_Data_Student::get_enrolled_courses_ids( $student_id );
-$date_format = get_option( 'date_format' );
-$time_format = get_option( 'time_format' );
 ?>
 <div class="wrap coursepress_wrapper course-student-profile">
 	<h2><?php esc_html_e( 'Student Profile', 'CP_TD' ); ?></h2>
-
+<?php
+if ( is_a( $student, 'WP_User' ) ) { 
+	$avatar = get_avatar( $student->user_email, 92 );
+	$enrolled_courses = CoursePress_Data_Student::get_enrolled_courses_ids( $student_id );
+	$date_format = get_option( 'date_format' );
+	$time_format = get_option( 'time_format' );
+?>
 	<table class="widefat striped">
 		<tr>
-			<td rowspan="3" width="5%"><?php echo $avatar; ?></td>
+			<td rowspan="4" width="5%"><?php echo $avatar; ?></td>
 			<td width="15%"><?php esc_html_e( 'Student ID', 'CP_TD' ); ?></td>
 			<td><?php echo $student_id; ?></td>
 		</tr>
@@ -23,8 +25,26 @@ $time_format = get_option( 'time_format' );
 			<td><?php esc_html_e( 'Last Name', 'CP_TD' ); ?></td>
 			<td><?php echo $student->last_name; ?></td>
 		</tr>
-	</table>
+		<tr>
+			<td><?php esc_html_e( 'Display Name', 'CP_TD' ); ?></td>
+			<td><?php echo $student->display_name; ?></td>
+		</tr>
+<?php if ( current_user_can( 'edit_users' ) ) { ?>
+		<tr>
+			<td rowspan="2"><a href="<?php echo get_edit_user_link( $student->ID ); ?>" class="button"><?php _e( 'Edit user', 'CP_TD' ); ?></td>
+			<td><?php esc_html_e( 'Email', 'CP_TD' ); ?></td>
+			<td><?php echo $student->user_email; ?></td>
+		</tr>
+		<tr>
+			<td><?php esc_html_e( 'Registered', 'CP_TD' ); ?></td>
+			<td><?php echo $student->user_registered; ?></td>
+		</tr>
 
+<?php } ?>
+	</table>
 	<h3><?php esc_html_e( 'Enrolled Courses', 'CP_TD' ); ?></h3>
 	<?php $this->enrolled_courses->display(); ?>
+<?php } else {
+	_e( 'Student not found.', 'CP_TD' );
+} ?>
 </div>
