@@ -8,6 +8,8 @@ CHANGELOG
 = 2.0.4 =
 -------------------------------------------------
 * Fixed a bug when user can enroll in the course without paying to paid course.
+* Added fields "Display Name", "Email" and "Registered" to "Student Profile" page.
+* Added "Edit user" link on "Student Profile" page.
 
 = 2.0.3 =
 -------------------------------------------------
